--- a/html_statici/streetwear.html
+++ b/html_statici/streetwear.html
@@ -3,23 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Resell Zone - La Scarpa dei sogni</title>
+  <title>Shoes Zone - La Scarpa dei sogni</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+</head>
+<body class="bg-dark" style="background-image: url('https://wallpapers.com/images/hd/supreme-and-high-rise-buildings-z3vc1us4bjvwcail.jpg')"> 
   <!-- Custom CSS -->
   <style>
     body {
       padding-top: 56px; /* Aggiungi un padding per la navbar fixed-top */
     }
+
+    /* Aggiungi questa regola per cambiare il colore dello sfondo del titolo */
+    .custom-header-bg {
+      background-color: rgba(62, 80, 71, 0.8); /* Colore sfondo con trasparenza */
+    }
+
+    /* Aggiungi questa regola per applicare sfocatura ai singoli container */
+    .blurred-container {
+      background-size: cover;
+      background-position: center;
+      filter: blur(px) brightness(0.7); /* Livello di sfocatura e luminosità desiderati */
+      padding: 20px; /* Aggiungi spaziatura per una migliore visualizzazione */
+      border-radius: 10px; /* Opzionale: bordi arrotondati per un aspetto più elegante */
+    }
   </style>
-</head>
-<body>
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Resell Zone</a>
+    <a class="navbar-brand" href="#">Shoes Zone</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -39,16 +52,16 @@
   </nav>
 
   <!-- Header -->
-  <header class="bg-primary text-white text-center py-5">
+  <header class="custom-header-bg text-white text-center py-5">
     <div class="container">
-      <h1 class="display-4">Scarpe Streetwear</h1>
+      <h1 class="display-4">🔥Scarpe Streetwear🔥</h1>
       <p class="lead">Trova le scarpe che riflettono il tuo stile unico.</p>
     </div>
   </header>
 
-  <!-- Contenuto principale della pagina -->
+ <!-- Contenuto principale della pagina -->
 
-  <div class="container">
+ <div class="container">
     <div class="row">
       <!-- Esempio di scarpa 1 -->
       <div class="col-lg-4 col-md-6 mb-4">
@@ -110,16 +123,17 @@
           <img class="card-img-top" src="https://thesortage.com/cdn/shop/files/IMG_6302.jpg?v=1695391748&width=1946" alt="Nike SB Dunk Low Supreme Rammellzee">
           <div class="card-body">
             <h4 class="card-title">Nike SB Dunk Low Supreme Rammellzee</h4>
-            <p class="card-text">Supreme ha collaborato di nuovo con Nike per un'altra ambitissima SB Dunk Low. Le Nike SB Dunk Low Supreme Rammellzee sono uscite il 31 agosto del 2023, al prezzo di $138. Le sneakers sono andate rapidamente esaurite nelle sedi Supreme di tutto il mondo. Queste esclusive SB Dunk Low presentano l'arte del compianto Rammellzee, che ha collaborato con Supreme numerose volte nel corso degli anni, anche nel 2003. L'artista newyorkese presta il suo stile iconico alla tomaia di questa sneakers in edizione limitata, che mostra i suoi motivi unici in stile graffiti. Le Nike SB Dunk Low Supreme Rammellzee sono uscite il 31 agosto del 2023, al prezzo di vendita di $138.</p>
+            <p class="card-text">Supreme ha collaborato di nuovo con Nike per un'altra ambitissima SB Dunk Low. Le Nike SB Dunk Low Supreme Rammellzee sono uscite il 31 agosto del 2023. Le sneakers sono andate rapidamente esaurite nelle sedi Supreme di tutto il mondo. Queste esclusive SB Dunk Low presentano l'arte del compianto Rammellzee, che ha collaborato con Supreme numerose volte nel corso degli anni, anche nel 2003. L'artista newyorkese presta il suo stile iconico alla tomaia di questa sneakers in edizione limitata, che mostra i suoi motivi unici in stile graffiti.</p>
           </div>
         </div>
       </div>
  
 
+
   <!-- Footer -->
   <footer class="py-3 bg-dark text-white">
     <div class="container text-center">
-      <p>Resell Zone - La Scarpa dei sogni per tutti i giorni</p>
+      <p>Shoes Zone - La Scarpa dei sogni per tutti i giorni</p>
     </div>
   </footer>
 
